# envguard

./: .envguard-baseline  .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-22-envguard.md
docs/superpowers/specs/: 2026-05-22-envguard-design.md
envguard/: cli.py  parity.py  patterns.py  report.py  scanner.py
tests/: test_cli.py  test_parity.py  test_patterns.py  test_report.py  test_scanner.py
tests/fixtures/: clean.py  dirty.py
